--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,23 @@
             <version>1.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
     </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
+	<docker.image.prefix>cataworx</docker.image.prefix>
     </properties>
 
 
@@ -66,6 +78,25 @@
                     </execution>
                 </executions>
             </plugin>
+	
+	  <plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>0.4.11</version>
+            <configuration>
+                <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                <dockerDirectory>src/main/docker</dockerDirectory>
+                <resources>
+                    <resource>
+                        <targetPath>/</targetPath>
+                        <directory>${project.build.directory}</directory>
+                        <include>${project.build.finalName}.jar</include>
+                    </resource>
+                </resources>
+            </configuration>
+        </plugin>
+
+
         </plugins>
     </build>
 
